# mandlebrot

./: .gitignore  Cargo.toml  readme.md
assets/examples/images/: example2.txt  example3.txt  example5.txt  example6.txt
assets/examples/videos/: example1.txt  example2.txt
docs/: download.html  index.html
docs/css/: styles.css
docs/gallery/: gallery6-save.txt  gallery7-save.txt
docs/js/: galleryscript.js
src/: complex.rs  layers.rs  lib.rs  main.rs  menu.rs  palettes.rs  palletes.rs  specific_divergence.rs
