[package]
name = "mandlebrot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 3

[dependencies]
macroquad = "0.3.26"
rand = "0.8.5"
chrono = "0.4.24"
threadpool = "1.0"
dashu-float = "0.3.2"